Compile with JDK9
* updated groovy to a java 9 compatible version
* force java 9 compatible jruby version for gem-maven-plugin
* use add-opens to prevent gibberish in the head of the generated pom
* ignore add-opens on older java versions
* fixed classpath issues in tests
* no Java9 specific features are used

Closes #591